--- a/backupd.project
+++ b/backupd.project
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CodeLite_Project Name="backupd" Version="10.0.0" InternalType="Console">
+  <Plugins>
+    <Plugin Name="qmake">
+      <![CDATA[00010001N0005Debug000000000000]]>
+    </Plugin>
+  </Plugins>
   <Description/>
   <Dependencies/>
+  <VirtualDirectory Name="src">
+    <File Name="main.c"/>
+    <File Name="utils.h"/>
+    <File Name="utils.c"/>
+    <File Name="daemon.h"/>
+    <File Name="daemon.c"/>
+    <File Name="serverconfig.h"/>
+    <File Name="serverconfig.c"/>
+    <File Name="plugins.h"/>
+    <File Name="plugins.c"/>
+    <File Name="worker.c"/>
+    <File Name="worker.h"/>
+  </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
@@ -16,7 +34,9 @@
       <Compiler Options="-g;-O0;-Wall" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
       </Compiler>
-      <Linker Options="" Required="yes"/>
+      <Linker Options="" Required="yes">
+        <Library Value="dl"/>
+      </Linker>
       <ResourceCompiler Options="" Required="no"/>
       <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Debug" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
@@ -92,15 +112,4 @@
       </Completion>
     </Configuration>
   </Settings>
-  <VirtualDirectory Name="src">
-    <File Name="main.c"/>
-    <File Name="utils.h"/>
-    <File Name="utils.c"/>
-    <File Name="daemon.h"/>
-    <File Name="daemon.c"/>
-    <File Name="serverconfig.h"/>
-    <File Name="serverconfig.c"/>
-    <File Name="plugins.h"/>
-    <File Name="plugins.c"/>
-  </VirtualDirectory>
 </CodeLite_Project>
