--- a/backupd.project
+++ b/backupd.project
@@ -43,6 +43,11 @@
     <File Name="backupconfig.h"/>
     <File Name="backupconfig.c"/>
   </VirtualDirectory>
+  <VirtualDirectory Name="plugins">
+    <File Name="plugins/targz.c" ExcludeProjConfig="Debug"/>
+    <File Name="plugins/bakrotate.c" ExcludeProjConfig="Debug"/>
+    <File Name="plugins/Makefile" ExcludeProjConfig="Debug"/>
+  </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
@@ -59,9 +64,11 @@
       </Compiler>
       <Linker Options="" Required="yes">
         <Library Value="dl"/>
+        <Library Value="pthread"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
       <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Debug" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
@@ -103,6 +110,7 @@
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
       <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Release" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
+      <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
@@ -135,7 +143,4 @@
       </Completion>
     </Configuration>
   </Settings>
-  <VirtualDirectory Name="plugins">
-    <File Name="plugins/targz.c"/>
-  </VirtualDirectory>
 </CodeLite_Project>
