--- a/backupd.project
+++ b/backupd.project
@@ -44,9 +44,9 @@
     <File Name="backupconfig.c"/>
   </VirtualDirectory>
   <VirtualDirectory Name="plugins">
-    <File Name="plugins/targz.c" ExcludeProjConfig="Debug"/>
-    <File Name="plugins/bakrotate.c" ExcludeProjConfig="Debug"/>
-    <File Name="plugins/Makefile" ExcludeProjConfig="Debug"/>
+    <File Name="plugins/targz.c" ExcludeProjConfig="Debug;Release"/>
+    <File Name="plugins/bakrotate.c" ExcludeProjConfig="Debug;Release"/>
+    <File Name="plugins/Makefile" ExcludeProjConfig="Debug;Release"/>
   </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
@@ -68,7 +68,6 @@
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
       <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Debug" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
-      <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
@@ -107,10 +106,10 @@
       </Compiler>
       <Linker Options="" Required="yes">
         <Library Value="dl"/>
+        <Library Value="pthread"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
       <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Release" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
-      <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
